5.0.0
---------
- The application has been refactored. Smaller, faster, and cleaner.
- The application has been relicensed back to the Mozilla Public License 2.0.
- Improved error checking
- Improved program flow
- Improved parameter passing
- Improved dependency detection
- Visual improvements, including the removal of unneeded messages

4.1.2
---------
- Relicensed to the more permissive, Apache License 2.0
- Changed interpreter from '#/usr/bin/env python' to '#/usr/bin/python3'.
  This is a symlink to the system's python 3.X interpreter. Thus even if the user has python 2.X
  set in 'eselect python list', the program will still work.

4.1.1
---------
- The application will now use the zpool.cache file that's on the system
  at the time of creation if it finds one.
- The hostid of the generating system will be stored in /etc/hostid on the
  initramfs.
- 'refresh' option has been added so that if your initramfs has a stale
  zpool.cache and you need to boot, you can use it to ignore that cachefile
  and automatically install a clean zpool.cache into your system.
- util-linux programs, zsplat, ztest, zstreamdump, zpios, zinject, zhack
  have been removed.
- Fixed a bug with single user mode

4.1.0
---------
- The application can now be ran from any directory
- The application has been redesigned so that it's execution is cleaner
- Fixed a bug where 'lmodules' wasn't being set correctly
- The application will generate a 16 digit random number temporary directory,
  in /tmp to minimize folder/file collisions (i.e: /tmp/1786-2475-3902-4380/)
- The application has been changed from procedural to object oriented.
- Fixed a minor bug where the err_mod_dexi() wasnt being found
- Other nice improvements that I can't remember...

4.0.3
---------
- The application will now ask you a max of three times to enter your
  correct decryption password before throwing you into rescue shell.

4.0.2
---------
- Fixed a bug where parameters passed to the kernel including a "=" weren't